--- a/src/app/reactive-search/lib-search/lib-search.component.html
+++ b/src/app/reactive-search/lib-search/lib-search.component.html
@@ -29,14 +29,14 @@
     <table class="table" id="myTable">
       <thead>
         <tr>
-          <th>Title</th>
-          <th>Category</th>
+          <th>Nome</th>
+          <th>Versão</th>
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>HTML</td>
-          <td>Web Development</td>
+        <tr *ngFor="let result of results$ | async ">
+          <td> {{ result.name }} </td>
+          <td> {{ result.version }}</td>
         </tr>
       </tbody>
     </table>
